--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
 
       - name: Run Tests
         run: |
+          export GITHUB_TOKEN=${{secrets.GH_PAT}}
           GOFLAGS=-mod=mod go install github.com/ory/go-acc
           GOFLAGS=-mod=mod go-acc --tags=integration --covermode=count -o=coverage.out $(go list ./...)
           GOFLAGS=-mod=mod go tool cover -func=coverage.out -o=coverage.out
